your favourite ship now has a fuel meter!

--- a/Project3/Project3.vcxproj.filters
+++ b/Project3/Project3.vcxproj.filters
@@ -51,4 +51,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md">
+      <Filter>Fichiers sources</Filter>
+    </None>
+  </ItemGroup>
 </Project>
