--- a/Project3/Project3.vcxproj
+++ b/Project3/Project3.vcxproj
@@ -134,6 +134,9 @@
     <ClInclude Include="shakeView.h" />
     <ClInclude Include="Ship.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
